adding transactions controller in swagger
